<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">
<LinearLayout 
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:paddingLeft="20dip" android:paddingRight="20dip">


	<TextView 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content" 
	android:id="@+id/text_proxy_ip" 
	android:text="@string/proxy_ip">
	</TextView>
	<EditText 
	android:layout_height="wrap_content" 
	android:layout_width="fill_parent" 
	android:id="@+id/edit_text_twitter_proxy_ip">
	</EditText>
	<TextView 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content" 
	android:id="@+id/text_user_name" 
	android:text="@string/user_name">
	</TextView>
	<EditText 
	android:layout_height="wrap_content"
		android:layout_width="fill_parent" 
		android:id="@+id/edit_text_twitter_proxy_user_name"/>
		<TextView 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:id="@+id/text_user_password" 
		android:text="@string/password">
		</TextView>
		<EditText 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent" 
		android:id="@+id/edit_text_twitter_proxy_user_password" 
		android:password="true"/>
		    <CheckBox
     	android:layout_width="fill_parent"
     	android:layout_height="wrap_content"
     	android:checked="false"
     	android:text="@string/show_password"
     	android:id="@+id/show_twitter_proxy_password"/>
</LinearLayout>
</ScrollView>
