<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#00F0FFFF"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <include layout="@layout/tools_header" />
            </RelativeLayout>
 <LinearLayout
     android:layout_marginLeft="15dip"
     android:layout_marginRight="15dip"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="60dip"
                android:layout_margin="2dip"
                android:background="#00E0FFFF" >

                <EditText
                    android:id="@+id/name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/serch_name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="150dip"
                android:layout_margin="2dip"
                android:background="#00E0FFFF"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dip"
                    android:text="@string/serch_hometown"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50dip"
                    android:layout_margin="2dip"
                    android:background="#00E0FFFF"
                    android:orientation="horizontal" >

                    <EditText
                        android:hint="@string/serch_province"
                        android:id="@+id/prov"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50dip"
                    android:layout_margin="2dip"
                    android:background="#00E0FFFF"
                    android:orientation="horizontal" >
                    <EditText
                         android:hint="@string/city"
                        android:id="@+id/city"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                      
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="70dip"
                android:layout_margin="2dip"
                android:background="#00E0FFFF"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serch_gender"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <RadioGroup
                    android:id="@+id/sex_radiogroup"
                    android:layout_width="fill_parent"
                    android:layout_height="50dip"
                    android:layout_margin="5dip"
                    android:background="#00E0FFFF"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/sex_none"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/not_limited"
                        android:textColor="#000000" />

                    <RadioButton
                        android:id="@+id/sex_boy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/male"
                        android:textColor="#000000" />

                    <RadioButton
                        android:id="@+id/sex_girl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female"
                        android:textColor="#000000" />
                </RadioGroup>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dip" >

                <Button
                    android:id="@+id/serch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="25dip"
                    android:background="@drawable/selector_button_add"
                    android:text="@string/search"
                    android:textColor="#0F5A78"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>