<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:orientation="vertical" android:background="#ffffff">
	<RelativeLayout 
		android:id="@+id/RelativeLayout01"
		android:layout_width="fill_parent"
		android:background="#424242"
		android:padding="10dip" android:layout_height="50dip">
		<ImageView 
			android:layout_alignParentTop="true" 
			android:layout_alignParentLeft="true" 
			android:id="@+id/dialog_icon" 
			android:layout_height="30dip" 
			android:layout_width="30dip" 
			android:src="@drawable/translation" 
			android:scaleType="fitXY">
			</ImageView>
			<TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:text="@string/title"
				android:id="@+id/dialog_title"
				android:textSize="22dip" 
				android:textColor="#ffffff" 
				android:layout_alignLeft="@+id/dialog_icon" 
				android:layout_marginLeft="35dip">
				</TextView>
		<ProgressBar 
			android:layout_height="20dip"
			android:layout_width="20dip" 
			android:id="@+id/dialog_progress_bar"
			android:layout_alignParentRight="true" 
			android:layout_marginTop="7dip" android:visibility="gone">
			</ProgressBar>
		
	
</RelativeLayout>
	<TextView 
		android:layout_width="fill_parent"
		android:layout_height="1dip"
		android:text="                                                                                                                                                                                                                               " android:background="#ffffff"></TextView>
		<LinearLayout 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:orientation="horizontal" 
		android:gravity="center_vertical" 
		android:layout_marginTop="15dip">

		<TextView 
			android:layout_height="wrap_content" 
			android:layout_marginLeft="10dip" 
			android:layout_marginTop="5dip" 
			android:gravity="center" 
			android:layout_width="80dip" 
			android:textSize="18sp" 
			android:text="@string/engine" android:textColor="#000000"/>
		<Spinner 
			android:layout_height="wrap_content" 
			android:layout_marginRight="10dip" 
			android:layout_width="150dip" 
			android:id="@+id/Spinner_engine"/>

	</LinearLayout>
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:orientation="horizontal"
		android:gravity="center_vertical">

		<TextView 
			android:layout_height="wrap_content"
			android:text="@string/from"
			android:layout_marginLeft="10dip"
			android:layout_marginTop="5dip" 
			android:gravity="center" 
			android:layout_width="80dip" 
			android:textSize="18sp" android:textColor="#000000"/>
		<Spinner 
			android:id="@+id/Spinner_language_from"
			android:layout_height="wrap_content"
			android:layout_marginRight="10dip" 
			android:layout_width="150dip"/>

	</LinearLayout>

	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:orientation="horizontal">

		<TextView 
			android:layout_height="wrap_content"
			android:text="@string/to"
			android:layout_marginLeft="10dip"
			android:layout_marginTop="5dip" 
			android:gravity="center" 
			android:textSize="18sp" 
			android:layout_width="80dip" android:textColor="#000000"/>
		<Spinner 
			android:id="@+id/Spinner_language_to"
			android:layout_height="wrap_content"
			android:layout_marginRight="10dip" 
			android:layout_width="150dip"/>

	</LinearLayout>

	<LinearLayout 
 		android:id="@+id/LinearLayout01"
		android:layout_below="@id/cancelButton" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:background="#cccccc" 
		android:orientation="horizontal" 
		android:layout_marginTop="15dip">

			<Button 
				android:id="@+id/okButton" 
				android:layout_width="100dip"
				android:layout_height="wrap_content" 
				android:text="@string/ok"
				android:layout_weight="1"/>

			<Button 
				android:text="@string/cancel" 
				android:id="@+id/cancelButton"
				android:layout_width="100dip" 
				android:layout_height="wrap_content"
				android:layout_weight="1">
			</Button>
	</LinearLayout>



</LinearLayout>
